css/main.css
:root {
    --clr-dark: #333;
    --clr-dark-grey: #2D2D2D;
    --ff-accent: 'Merriweather Sans', sans-serif;
    --ff-primary: 'Merriweather', serif;
    --ff-title: "Patua One", serif;
    
    --clr-orange: #ff9245;
    --clr-med-orange: #eb8136;
}

html {
    font-size: 62.5%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%; 
    height: 100%;
    padding: 15% auto; 
    z-index: 1;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}

.tab span, .modal-form input[type="text"], .modal-form button {
    font-family: var(--ff-accent);
}

.tab span {
    color: #4d4842;
}

.modal-form input[type="text"] {
    font-weight: lighter;
}

.tab {
    background-color: white;
    padding: 20px 0px;
    border-top-style: solid;
    border-top-color: var(--clr-orange);
}

.modal-tabs {
    display: flex;
    justify-content: space-between;
}

.tinted {
    background-color: #ccc7c2;
    border-top-style: none;
}

.modal-tabs div {
    text-align: center;
    align-items: stretch;
    flex-grow: 1;
}

.modal-content {
    background-color: #ebebeb;
    display: flex;
    flex-direction: column;
    margin: 15% auto; 
    width: 80%; 
    font-size: 1.6rem;
    border-radius: 10px;
}

.inner-modal {
    display: flex;
    flex-direction: column;
    margin: 15px;
}

.modal-form form {
    display: flex;
    flex-direction: column;
}

.modal-form {
    background-color: white;
    padding-top: 15px;
    padding-bottom: 15px;
}

.modal-form .user-error {
    margin: 5px 15px;
    font-size: 1.4rem;
    font-family: var(--ff-accent);
    color: red;
}

.modal-form input,
.modal-form button {
    margin: 7px 15px;
    border-radius: 3px;
    height: 3rem;
}

.modal-form input {
    border: solid;
    border-width: 1px;
    border-color: #b5bbc5;
    box-shadow: inset 0 0 2px #f2f2f2;
    font-size: 1.6rem;
    padding-left: 10px;
}

.modal-form button {
    background-image: linear-gradient(var(--clr-orange), var(--clr-med-orange));
    border: none;
    font-size: 1.6rem;
    color: white;
}

.modal-form input[name="username"],
.modal-form input[name="first-name"] {
    margin-top: 14px;
}

.hide {
    display: none;
}

#close-box {
    align-self: flex-end;
    margin-bottom: 5px;
}

#close-box i {
    color: #807d7d;
    margin-right: 5px;
}

.page {
    height: 100vh; 
    margin: 0; 
    display: grid;
    grid-template-rows: auto 1fr;
}

.img-bg {
    background-image: url("../imgs/front-ant.jpg");
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

@media all and (min-width: 760px) {
    .modal-content {
        width: 534px; 
    }
}

